--- a/package.json
+++ b/package.json
@@ -15,26 +15,41 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-query": "^5.64.2",
     "@types/sanitize-html": "^2.11.0",
+    "@types/three": "^0.177.0",
     "@wisp-cms/client": "^0.0.22",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.16.0",
+    "google-one-tap": "^1.0.6",
     "lucide-react": "^0.424.0",
+    "mapbox-gl": "^3.2.0",
     "next": "15.1.6",
     "next-themes": "^0.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-map-gl": "^7.1.7",
     "react-markdown": "^9.0.1",
     "rss": "^1.2.2",
     "sanitize-html": "^2.13.0",
-    "tailwind-merge": "^2.4.0",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.177.0",
+    "url-join": "^5.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
