--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^12.16.0",
     "google-one-tap": "^1.0.6",
+    "instagram-web-api": "^2.2.2",
     "lucide-react": "^0.424.0",
     "mapbox-gl": "^3.2.0",
     "next": "15.1.6",
