--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.1.1",
@@ -26,6 +30,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-query": "^5.64.2",
+    "@types/jszip": "^3.4.0",
     "@types/sanitize-html": "^2.11.0",
     "@types/three": "^0.177.0",
     "@wisp-cms/client": "^0.0.22",
@@ -36,12 +41,14 @@
     "framer-motion": "^12.16.0",
     "google-one-tap": "^1.0.6",
     "instagram-web-api": "^2.2.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.424.0",
     "mapbox-gl": "^3.2.0",
     "next": "15.1.6",
     "next-themes": "^0.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-map-gl": "^7.1.7",
     "react-markdown": "^9.0.1",
@@ -51,6 +58,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.177.0",
+    "tus-js-client": "^4.3.1",
     "url-join": "^5.0.0",
     "zod": "^3.24.1"
   },
