--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -26,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
+    "@stripe/stripe-js": "^7.8.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.9",
@@ -46,6 +48,7 @@
     "mapbox-gl": "^3.2.0",
     "next": "15.1.6",
     "next-themes": "^0.3.0",
+    "openai": "^5.12.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-dropzone": "^14.3.8",
@@ -55,6 +58,7 @@
     "rss": "^1.2.2",
     "sanitize-html": "^2.13.0",
     "sonner": "^2.0.5",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.177.0",
