--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
@@ -51,6 +52,7 @@
     "react-hook-form": "^7.54.2",
     "react-map-gl": "^7.1.7",
     "react-markdown": "^9.0.1",
+    "react-shaders": "^0.0.4",
     "rss": "^1.2.2",
     "sanitize-html": "^2.13.0",
     "sonner": "^2.0.5",
